--- a/_posts/2019-12-21-the-us-narrative-today.html
+++ b/_posts/2019-12-21-the-us-narrative-today.html
@@ -1545,107 +1545,107 @@ stories:
   domain: http://www.ladysmithnews.com/
   link: https://www.ladysmithnews.com/news/article_0987898e-237f-11ea-a7ee-0f38dfc6f4e5.html
 images:
-- name: old-school-house-old-schoolhouse-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-wols.jpg
-- name: la-muse-grafitti-woman-bangs.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-grafitti-woman-bangs.jpg
-- name: san-francisco-street-view-san-francisco-street-view-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-post-modern.jpg
-- name: hollywood-building-hollywood-building-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-gred-mash.jpg
-- name: rain-princess-clowns_35893926114_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-clowns_35893926114_o.jpg
-- name: aws-s3-columbiagorge-columbiagorge-transformed-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-columbiagorge-columbiagorge-transformed-still.jpg
-- name: oldbarn-oldbarn-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-crabapple.jpg
-- name: aws-s3-stories-algo-microservices.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-algo-microservices.jpg
-- name: downtown-trucksilo-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-atari-asteroids.jpg
-- name: oldroad-old-road-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-dry-skin.jpg
-- name: docks-docks-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-atari-asteroids.jpg
-- name: oldsmallboat-oldsmallboat-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-crabapple.jpg
-- name: nazi-invasion-train-france-high-speed-in-station.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-train-france-high-speed-in-station.jpg
-- name: bf-skinner-seattle-looking-north.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-seattle-looking-north.jpg
-- name: bf-skinner-butterfly-purple-flower.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-butterfly-purple-flower.jpg
-- name: downtown-la-diego-rivera1.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-la-diego-rivera1.JPG
-- name: los-angeles-from-observatory-losangeles-from-observatory-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-atari-asteroids.jpg
-- name: art-museum-art-museum-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-propaganda-leaflets.jpg
-- name: oldcabin-oldcabin-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-gan-vogh.jpg
-- name: stalin-time-old-man-crossing-border.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-old-man-crossing-border.jpg
-- name: old-cabin-oldcabin-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-alien-goggles.jpg
-- name: lincoln-memorial-lincolnmemorial-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-rainbow-festival.jpg
-- name: oldroad-old-road-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-dark-soul.jpg
-- name: christianity-christianity-under-construction-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-blue-granite.jpg
-- name: old-church-oldchurch-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-gred-mash.jpg
-- name: oldbarn-oldbarn-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-dark-rain.jpg
-- name: stories-new-59-124-800-500-0-max-0--5--5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-59-124-800-500-0-max-0--5--5.jpg
-- name: amusement-park-amusement-park-2-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-matrix.jpg
-- name: san-francisco-street-view-san-francisco-street-view-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-blue-circuit-3.jpg
-- name: curtain-curtain-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-crafty-painting.jpg
-- name: curtain-curtain-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-purple-pond.jpg
-- name: desert-dragon-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/desert-dragon-purp-paper.jpg
-- name: locked-up-steam-lock-up-steam-china-prop.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-china-prop.jpg
-- name: sand-hand-sand-hand-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-hot-spicy.jpg
-- name: crow-crow-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-really-hot.jpg
-- name: lincoln-memorial-lincolnmemorial-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-sunday.jpg
-- name: bf-skinner-seattle-waterfront-ferris-wheel.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-seattle-waterfront-ferris-wheel.jpg
-- name: miamibeach-miamibeach-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-far-away.jpg
-- name: beach-rocks-beach-rocks-currents-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-ww2-dresden.jpg
-- name: amusement-park-amusement-park-2-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-mucha-mult.jpg
-- name: flower-barbed-wire-flower-barbed-wire-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-blue-circuit-4.jpg
-- name: amusement-park-amusement-park-2-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-colorful-blocks.jpg
-- name: bf-skinner-working-on-railroad-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-working-on-railroad-1.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-dry-skin.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-dry-skin.JPG
-- name: rain-princess-IMG_7527.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_7527.jpg
-- name: status-berlin-status-berlin-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-kand-two.jpg
-- name: mediterranean-mediterranean-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-yellow-collage.jpg
-- name: downtown-trucksilo.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo.jpg
-- name: art-museum-art-museum-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-copper-circuit.jpg
-- name: old-barn-old-barn-1500-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-alberto-giacometti.jpg
-- name: aws-s3-royalroads-royalroads-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-royalroads-royalroads-still.jpg
+- name: old-school-house-old-schoolhouse-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-really-hot.jpg
+- name: old-granary-field-oldhouse-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-diego-rivera1.jpg
+- name: dragon-desert-desert-dragon-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-feed-people.jpg
+- name: cargo-ship-cargo-ship-on-sea-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-internet-numbers.jpg
+- name: white-house-lawn-white-house-window-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-green-zuma.jpg
+- name: containership-containership-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-kand-two.jpg
+- name: berlinwall-DSC-0084-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-dali-three.jpg
+- name: store-on-corner-oldcabin-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-hot-spicy.jpg
+- name: walled-garden-walled-garden-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-emily-carr.jpg
+- name: yosemite-yosemite-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-ww2-color.jpg
+- name: paris-paris-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-smooth-ride.jpg
+- name: white-house-whitehouse-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-crafty-painting.jpg
+- name: braceros-domingo-ulloa-london-underground-covent-garden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-london-underground-covent-garden.jpg
+- name: copper-circuit-electric-tower-sun-behind.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-electric-tower-sun-behind.jpg
+- name: amusement-park-amusement-park-2-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-aqua.jpg
+- name: stories-soldier-computer-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-soldier-computer-dark-dali.jpg
+- name: machine-learning-gun-patent.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-learning-gun-patent.jpg
+- name: power-lines-power-lines-empty-space-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-plentiful.jpg
+- name: paris-paris-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-bright-sand.jpg
+- name: oldhouse-oldhouse-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-marcel-duchamp.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-purp-paper.jpg
+- name: old-gas-pumps-oldgaspumps-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-aqua.jpg
+- name: stories-flower-barbed-wire-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-flower-barbed-wire-nazi-poster.jpg
+- name: oldroad-old-road-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-really-hot.jpg
+- name: dc-statue-dcstatue-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-alberto-giacometti.jpg
+- name: downtown-trucksilo-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-yellow-paper.jpg
+- name: birdhouse-birdhouse-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-kand-two.jpg
+- name: old-granary-field-granaryfield-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-really-hot.jpg
+- name: trucksilo-trucksilo-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-neo-instinct.jpg
+- name: store-on-corner-store-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-dali-two.jpg
+- name: crow_bright_sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_bright_sand.jpg
+- name: supreme-court-supremecourt-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-hot-spicy.jpg
+- name: border-crossing-bordercrossing-umberto-bocc.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-umberto-bocc.png
+- name: carry-load-carryload-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-yellow-collage.jpg
+- name: stories-new-power-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-power-colorful-blocks.jpg
+- name: mediterranean-mediterranean-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-constitution.jpg
+- name: supreme-court-supremecourt-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-cinnamon-rolls.jpg
+- name: white-house-lawn-white-house-lawn-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-umberto-bocc.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-space-pizza.jpg
+- name: aws-s3-stories-old-yellow-house.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-old-yellow-house.jpg
+- name: nazi-invasion-IMG_7054.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_7054.jpg
+- name: old-gas-pumps-oldgaspumps-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-kand-two.jpg
+- name: dc-statue-dcstatue-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-alien-goggles.jpg
+- name: walled-garden-walled-garden-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-atari-asteroids.jpg
+- name: aws-s3-lighthouse-lighthouse-still-1200.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-lighthouse-lighthouse-still-1200.jpg
+- name: long-factory-nazi-invasion.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/long-factory-nazi-invasion.jpg
+- name: old-barn-old-barn-1500-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-kand-two.jpg
+- name: san-francisco-street-view-san-francisco-street-view-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-oily-mcoilface.jpg
+- name: border-crossing-bordercrossing-purp-paper.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-purp-paper.png
+- name: supreme-court-supremecourt-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-diego-rivera1.jpg
+- name: beach-rocks-beach-rocks-currents-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-sunday.jpg
 ---
 Riding In A Reindeer Sleigh.&nbsp;Ali Bainbridge Wins Beresford Meet.&nbsp;Falcons Not Expecting Much Fanfare In Home Finale.&nbsp;Bedford Lions Club Rings Bell For Salvation Army.&nbsp;Blue Jackets Host The Devils Following Overtime Win.&nbsp;They Shall Call His Name Emmanuel.&nbsp;How To Choose The Perfect Flat.&nbsp;Wisconsin Governor Rejects 'Making A Murderer' Pardon Bid.&nbsp;
